--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="contact">
             <h2>Ajuda</h2>
             <p>
-                Queremos ouvir você! Se tiver alguma dúvida, sugestão ou sentir falta de algum tópico que queira encontrar aqui, não hesite em entrar em contato conosco. Estamos aqui para ajudar e proporcionar o melhor conteúdo possível. Fale Conosco!
+                Queremos ouvir você! Se tiver alguma dúvida, sugestão ou sentir falta de algum tópico que queira encontrar aqui, não hesite em entrar em contato conosco. Estamos aqui para ajudar e proporcionar o melhor conteúdo possível. Fale Conosco! +99 (99) 99999-9999
             </p>
         </div>
     </main>
